--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -243,11 +243,15 @@
       <li><a href="ml_benchmarks/conv_net.html#hpolib.benchmarks.ml.conv_net.ConvolutionalNeuralNetwork.get_meta_information">get_meta_information() (hpolib.benchmarks.ml.conv_net.ConvolutionalNeuralNetwork static method)</a>
 
       <ul>
+        <li><a href="ml_benchmarks/fc_net.html#hpolib.benchmarks.ml.fully_connected_network.FCNetOnMnist.get_meta_information">(hpolib.benchmarks.ml.fully_connected_network.FCNetOnMnist static method)</a>
+</li>
         <li><a href="ml_benchmarks/fc_net.html#hpolib.benchmarks.ml.fully_connected_network.FullyConnectedNetwork.get_meta_information">(hpolib.benchmarks.ml.fully_connected_network.FullyConnectedNetwork static method)</a>
 </li>
         <li><a href="ml_benchmarks/logistic_regression.html#hpolib.benchmarks.ml.logistic_regression.LogisticRegression.get_meta_information">(hpolib.benchmarks.ml.logistic_regression.LogisticRegression static method)</a>
 </li>
         <li><a href="ml_benchmarks/svm.html#hpolib.benchmarks.ml.svm_benchmark.SupportVectorMachine.get_meta_information">(hpolib.benchmarks.ml.svm_benchmark.SupportVectorMachine static method)</a>
+</li>
+        <li><a href="ml_benchmarks/svm.html#hpolib.benchmarks.ml.svm_benchmark.SvmOnMnist.get_meta_information">(hpolib.benchmarks.ml.svm_benchmark.SvmOnMnist static method)</a>
 </li>
         <li><a href="synthetic_benchmarks/bohachevsky.html#hpolib.benchmarks.synthetic_functions.bohachevsky.Bohachevsky.get_meta_information">(hpolib.benchmarks.synthetic_functions.bohachevsky.Bohachevsky static method)</a>
 </li>
