--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -163,9 +163,11 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="synthetic_benchmarks/camelback.html#hpolib.benchmarks.synthetic_functions.camelback.Camelback">Camelback (class in hpolib.benchmarks.synthetic_functions.camelback)</a>
 </li>
+      <li><a href="ml_benchmarks/conv_net.html#hpolib.benchmarks.ml.conv_net.ConvolutionalNeuralNetwork">ConvolutionalNeuralNetwork (class in hpolib.benchmarks.ml.conv_net)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="ml_benchmarks/conv_net.html#hpolib.benchmarks.ml.conv_net.ConvolutionalNeuralNetwork">ConvolutionalNeuralNetwork (class in hpolib.benchmarks.ml.conv_net)</a>
+      <li><a href="ml_benchmarks/conv_net.html#hpolib.benchmarks.ml.conv_net.ConvolutionalNeuralNetworkOnCIFAR10">ConvolutionalNeuralNetworkOnCIFAR10 (class in hpolib.benchmarks.ml.conv_net)</a>
 </li>
       <li><a href="utility.html#hpolib.benchmarks.synthetic_functions.misc.SyntheticNoiseAndCost.cost_function">cost_function() (hpolib.benchmarks.synthetic_functions.misc.SyntheticNoiseAndCost method)</a>
 </li>
@@ -226,6 +228,8 @@
       <li><a href="ml_benchmarks/conv_net.html#hpolib.benchmarks.ml.conv_net.ConvolutionalNeuralNetwork.get_data">get_data() (hpolib.benchmarks.ml.conv_net.ConvolutionalNeuralNetwork method)</a>
 
       <ul>
+        <li><a href="ml_benchmarks/conv_net.html#hpolib.benchmarks.ml.conv_net.ConvolutionalNeuralNetworkOnCIFAR10.get_data">(hpolib.benchmarks.ml.conv_net.ConvolutionalNeuralNetworkOnCIFAR10 method)</a>
+</li>
         <li><a href="ml_benchmarks/fc_net.html#hpolib.benchmarks.ml.fully_connected_network.FCNetOnMnist.get_data">(hpolib.benchmarks.ml.fully_connected_network.FCNetOnMnist method)</a>
 </li>
         <li><a href="ml_benchmarks/fc_net.html#hpolib.benchmarks.ml.fully_connected_network.FullyConnectedNetwork.get_data">(hpolib.benchmarks.ml.fully_connected_network.FullyConnectedNetwork method)</a>
@@ -248,6 +252,8 @@
       <li><a href="ml_benchmarks/conv_net.html#hpolib.benchmarks.ml.conv_net.ConvolutionalNeuralNetwork.get_meta_information">get_meta_information() (hpolib.benchmarks.ml.conv_net.ConvolutionalNeuralNetwork static method)</a>
 
       <ul>
+        <li><a href="ml_benchmarks/conv_net.html#hpolib.benchmarks.ml.conv_net.ConvolutionalNeuralNetworkOnCIFAR10.get_meta_information">(hpolib.benchmarks.ml.conv_net.ConvolutionalNeuralNetworkOnCIFAR10 static method)</a>
+</li>
         <li><a href="ml_benchmarks/fc_net.html#hpolib.benchmarks.ml.fully_connected_network.FCNetOnMnist.get_meta_information">(hpolib.benchmarks.ml.fully_connected_network.FCNetOnMnist static method)</a>
 </li>
         <li><a href="ml_benchmarks/fc_net.html#hpolib.benchmarks.ml.fully_connected_network.FullyConnectedNetwork.get_meta_information">(hpolib.benchmarks.ml.fully_connected_network.FullyConnectedNetwork static method)</a>
