--- a/dev/_modules/hpolib/benchmarks/synthetic_functions/misc.html
+++ b/dev/_modules/hpolib/benchmarks/synthetic_functions/misc.html
@@ -134,7 +134,7 @@
 
         <span class="bp">self</span><span class="o">.</span><span class="n">original_benchmark</span> <span class="o">=</span> <span class="n">original_benchmark</span>
 
-        <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="n">__init__</span><span class="p">()</span>
+        <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">()</span>
 
 <div class="viewcode-block" id="SyntheticNoiseAndCost.sigma_function"><a class="viewcode-back" href="../../../../utility.html#hpolib.benchmarks.synthetic_functions.misc.SyntheticNoiseAndCost.sigma_function">[docs]</a>    <span class="k">def</span> <span class="nf">sigma_function</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dataset_fraction</span><span class="p">):</span>
         <span class="n">sigma</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">sigma_min</span>
@@ -185,7 +185,7 @@
     </p>
     <p>
         &copy; Copyright 2016, Katharina Eggensperger, Matthias Feurer, Aaron Klein, Stefan Falkner.<br/>
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.5.1.<br/>
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.5.2.<br/>
     </p>
   </div>
 </footer>
