--- a/dev/_modules/hpolib/benchmarks/ml/fully_connected_network.html
+++ b/dev/_modules/hpolib/benchmarks/ml/fully_connected_network.html
@@ -145,7 +145,8 @@
 
         <span class="bp">self</span><span class="o">.</span><span class="n">num_classes</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">int32</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">unique</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">train_targets</span><span class="p">)</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span>
         <span class="c1"># Minimum dataset size is equal to the maximum batch size</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">s_min</span> <span class="o">=</span> <span class="mi">512</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">s_min</span> <span class="o">=</span> <span class="nb">float</span><span class="p">(</span><span class="mi">512</span><span class="p">)</span> <span class="o">/</span> <span class="bp">self</span><span class="o">.</span><span class="n">train</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
+
         <span class="k">if</span> <span class="n">rng</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">rng</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">RandomState</span><span class="p">()</span>
         <span class="k">else</span><span class="p">:</span>
@@ -192,7 +193,7 @@
         <span class="n">c</span> <span class="o">=</span> <span class="n">cost_curve</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span>
         <span class="k">return</span> <span class="p">{</span><span class="s1">&#39;function_value&#39;</span><span class="p">:</span> <span class="n">y</span><span class="p">,</span>
                 <span class="s2">&quot;cost&quot;</span><span class="p">:</span> <span class="n">c</span><span class="p">,</span>
-                <span class="s2">&quot;learning_curve_valid_error&quot;</span><span class="p">:</span> <span class="n">lc_curve</span><span class="p">,</span>
+                <span class="s2">&quot;learning_curve&quot;</span><span class="p">:</span> <span class="n">lc_curve</span><span class="p">,</span>
                 <span class="s2">&quot;train_loss&quot;</span><span class="p">:</span> <span class="n">train_loss</span><span class="p">,</span>
                 <span class="s2">&quot;valid_loss&quot;</span><span class="p">:</span> <span class="n">valid_loss</span><span class="p">,</span>
                 <span class="s2">&quot;learning_curve_cost&quot;</span><span class="p">:</span> <span class="n">cost_curve</span><span class="p">}</span>
